# youtube-agent-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260416_0001_initial_domain_schema.py  20260416_0002_add_rendered_status.py  20260416_0003_add_scheduled_publish_fields.py  20260416_0004_add_project_events.py
app/: __init__.py  main.py
app/adapters/: __init__.py  content_generation.py  google_cloud_media.py  media.py  narration.py  rendering.py  youtube_analytics.py  youtube_oauth.py  youtube_publisher.py
app/agents/: __init__.py  factory.py
app/api/: dependencies.py  router.py
app/api/routes/: analytics.py  content_generation.py  health.py  media_assets.py  oauth.py  pipeline.py  (+9 more)
app/core/: __init__.py  config.py  security.py
app/db/: base.py  models.py  repositories.py  session.py
app/domain/: entities.py  enums.py  exceptions.py
app/services/: analytics.py  content_generation.py  interfaces.py  media_assets.py  oauth.py  pipeline.py  project_actions.py  project_editing.py  projects.py  publishing.py  rendering.py  review.py  studio.py  system_settings.py
app/tasks/: __init__.py  celery_app.py  pipeline.py  publishing.py
app/workflows/: __init__.py  content_pipeline.py
tests/: conftest.py  test_analytics_api.py  test_config.py  test_content_generation_api.py  test_db_models.py  test_domain_entities.py  test_google_cloud_media_adapters.py  test_health.py  test_media_adapter.py  test_media_assets_api.py  test_narration_adapter.py  test_oauth_api.py  test_pipeline_api.py  test_project_actions_api.py  test_project_metadata_api.py  test_projects_api.py  test_publishing_api.py  test_rendering_api.py  test_review_dashboard.py  test_studio_dashboard.py  test_system_settings.py
